# MEDTEAMS

./: .gitignore  ARCHITECTURE.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/calendar/: page.tsx
src/app/patients/: page.tsx
src/app/patients/[id]/: page.tsx
src/app/settings/: page.tsx
src/components/: Sidebar.tsx  VitalsChart.tsx
src/context/: AuthContext.tsx
src/lib/: localUsers.ts  roles.ts
src/store/: useAppSettingsStore.ts  useClinicStore.ts
