[package]
name = "medteams-tauri"
version = "0.1.0"
description = "MedTeams Clinic Desktop Application with Local SQLite Database"
authors = ["MedTeams Team"]
edition = "2021"
rust-version = "1.56"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open", "window-all"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "medteams-tauri"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
